added skeleton for pop up

--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
       </div>
     </div>
 
+    <div class="modal-container hidden" id="recipe-modal">
+      <div class="modal-content">
+        <button id="modal-close-btn" class="modal-close-btn">+</button>
+        <div id="recipe-details-content">
+          <h2>Carrot cake</h2>
+          <img src="#" alt="carrot cake" />
+          <h3>category : desert</h3>
+          <h3>category : desert</h3>
+          <h3>category : desert</h3>
+          <ul>
+            <li>450 ml veg oil</li>
+            <li>400 gm plain flour</li>
+            <li>2 eggs</li>
+          </ul>
+          <h3>instructions</h3>
+          <p>instructions</p>
+          <h3>Video Recipe</h3>
+          <div class="video-wrapper">
+            <a href="#">Watch on Youtube</a>
+          </div>
+          <div class="source-wrapper">
+            <a href="">View Original Source</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
