added styles to header section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="recipe-finder-container">
       <h1>Recipe Finder</h1>
-      <form action="">
+      <form action="" id="search-form" class="search-box">
         <input
           type="text"
           id="search-input"
