--- a/index.html
+++ b/index.html
@@ -28,20 +28,14 @@
         <button type="button" id="random-button" class="random-button">
           Get Random Recipe
         </button>
-        <div class="message" id="message-area"></div>
+        <div class="message" id="message-area">
+          Search for a recipe or get a random recipe
+        </div>
         <div class="results-grid" id="results-grid">
-          <div class="recipe-item">
+          <!-- <div class="recipe-item">
             <img src="" alt="" />
             <h3>Cake</h3>
-          </div>
-          <div class="recipe-item">
-            <img src="" alt="" />
-            <h3>Cake</h3>
-          </div>
-          <div class="recipe-item">
-            <img src="" alt="" />
-            <h3>Cake</h3>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
