--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           type="text"
           id="search-input"
           placeholder="search by name (eg. carrot)"
-          required
         />
         <button type="submit" id="search-button">Search</button>
       </form>
@@ -67,6 +66,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
