added popup recipe details

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="modal-content">
         <button id="modal-close-btn" class="modal-close-btn">+</button>
         <div id="recipe-details-content">
-          <h2>Carrot cake</h2>
+          <!-- <h2>Carrot cake</h2>
           <img src="#" alt="carrot cake" />
           <h3>category : desert</h3>
           <h3>category : desert</h3>
@@ -61,7 +61,7 @@
           </div>
           <div class="source-wrapper">
             <a href="">View Original Source</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
